--- a/02-ejercicio_HDV.html
+++ b/02-ejercicio_HDV.html
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width device-width , initial-scale=1.0">
     <title> Document </title>
 </head>
-<body style="background-color: aliceblue;">
+<body style="background-color: rgb(202, 213, 223);">
     <center>
     <h1>EDGAR JOSE PULIDO ROTE</h1>
     <h2> Ingeniero en sistemas </h2>
 
     <img src="https://img.freepik.com/fotos-gratis/retrato-de-um-cara-barbudo-caucasiano-confiante-e-amigavel-com-bigode-usando-oculos-sorrindo-educadamente-e-parecendo-relaxado-e-calmo-sobre-a-parede-cinza-ouvindo-a-reclamacao-do-cliente-sobre-a-parede-cinza_176420-22514.jpg?w=2000" style= "block-size: 300px;" alt="" width="300" height="300" />
 
-    <h3> SORB</h3>
+    <h3> DATOS PERSONALES </h3>
+    <h4>Correo: Edgarotepulido@gyoha.co</h4>
+    <h4> Celular : 963258741 </h4>
+    <h4> Dirrecion: Calle sin nombre # un numero</h4> 
+    <h4> Genero: Masculino</h4>
+    <h4> Estado civil: Soltero</h4>
+    <hr> 
+    <h3 align ="left"> Perfil:</h3>
+    <h4 align ="left"> Ingeniero con muchas habilidades y conociento en todo el campo de la ingenieria en sistemas con alta experiencia en el manejo de datos , inteligencia artificial (IA). Gradudo con honores en la UNICHTP, he tenido varios puestos
+     como Coordinador de bases de datos en la empresa WIRIDU.
 
-
-
-
+    </h4>
 
 
 
