--- a/03-ejercicio_IG.html
+++ b/03-ejercicio_IG.html
@@ -21,7 +21,7 @@
                 <table border="0" style="border-color: blueviolet; width: 100%;">
                     <tr>
                         <td colspan="3">
-                            <p> Gapasneakers2.0 <img src="https://cdn-icons-png.flaticon.com/512/6364/6364343.png" alt="" height="15" width="15"> <button>Siguiendo</button> <button>Mensaje</button> <img src="https://cdn-icons-png.flaticon.com/512/6904/6904074.png" alt="" height="25" width="25"> <img src="https://cdn-icons-png.flaticon.com/512/57/57013.png" alt="" height="25" width="25"> </p>
+                            <p> Gapasneakers2.0 <img src="https://cdn-icons-png.flaticon.com/512/6364/6364343.png" alt="" height="15" width="15"> <button style="background-color: rgba(226, 233, 242, 0.94);">Siguiendo</button> <button style="background-color: rgba(226, 233, 242, 0.94);">Mensaje</button> <img src="https://cdn-icons-png.flaticon.com/512/6904/6904074.png" alt="" height="25" width="25"> <img src="https://cdn-icons-png.flaticon.com/512/57/57013.png" alt="" height="25" width="25"> </p>
                         </td>
                     </tr>
                     <tr>
