--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <tr style="text-align: center;">
                         
                         <td>
-                         <a href="https://github.com/AndreePaez/EjerciciosRIWI-3B/blob/df950e62ff725e603cf1939656030fcd7a803737/01-ejercicio.html" target="_blank"> ➡️Observar ejercicio</a>  
+                         <a href="IG.html" target="_blank"> ➡️Observar ejercicio</a>  
                         </td>
                         <td>
                          <a href="https://github.com/AndreePaez/EjerciciosRIWI-3B/blob/main/02-ejercicio_HDV.html" target="_blank"> ➡️Observar ejercicio</a>  
