--- a/03-ejercicio_IG.html
+++ b/03-ejercicio_IG.html
@@ -10,7 +10,7 @@
     <table border="0" style="width: 600px;" align="center">
         <tr>
             <td style="width: 200px;"">
-                <img style="margin: 20px;" class="a" src="LogoGapafondonegro.jpg" alt="" height="150" width="150">
+                <img style="margin: 20px;" class="a" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="150" width="150">
                 <style>
                     .a{
                         border-radius: 50%;
@@ -79,7 +79,7 @@
     <table border="0" style="width: 600px;" align="center">
         <tr>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
                 <br> CLIENTES
                 <style>
                     .b{
@@ -88,7 +88,7 @@
                 </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
                 <br> ENVIOS
             <style>
                 .b{
@@ -97,7 +97,7 @@
             </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
             <style>
                 .b{
                     border-radius: 50%;
@@ -105,7 +105,7 @@
             </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
             <style>
                 .b{
                     border-radius: 50%;
@@ -113,7 +113,7 @@
             </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
             <style>
                 .b{
                     border-radius: 50%;
@@ -121,7 +121,7 @@
             </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
             <style>
                 .b{
                     border-radius: 50%;
@@ -129,7 +129,7 @@
             </style>
             </td>
             <td style="width: 76px;">
-                <img class="b" src="LogoGapafondonegro.jpg" alt="" height="70" width="70">
+                <img class="b" src="./IMAGENES/LogoGapafondonegro.jpg" alt="" height="70" width="70">
             <style>
                 .b{
                     border-radius: 50%;
@@ -142,37 +142,37 @@
     <table border="0" style="width: 600px;" align="center">
         <tr>
             <td style="width: 200px;">
-                <img src="UNDER.jpg" alt="" width="185">
+                <img src="./IMAGENES/UNDER.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="NIKE.OFF.jpg" alt="" width="185">
+                <img src="./IMAGENES/NIKE.OFF.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="NIKE.AF1.jpg" alt="" width="185">
+                <img src="./IMAGENES/NIKE.AF1.jpg" alt="" width="185">
             </td>  
         </tr>
 
         <tr>
             <td style="width: 200px;">
-                <img src="ADIDAS.B.B.1.jpg" alt="" width="185">
+                <img src="./IMAGENES/ADIDAS.B.B.1.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="ADIDAS.B.B.jpg" alt="" width="185">
+                <img src="./IMAGENES/ADIDAS.B.B.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="ADIDAS.B.B.2.jpg" alt="" width="185">
+                <img src="./IMAGENES/ADIDAS.B.B.2.jpg" alt="" width="185">
             </td>
         </tr>
 
         <tr>
             <td style="width: 200px;">
-                <img src="NIKE.DIOR.3.jpg" alt="" width="185">
+                <img src="./IMAGENES/NIKE.DIOR.3.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="NIKE.DIOR.1.jpg" alt="" width="185">
+                <img src="./IMAGENES/NIKE.DIOR.1.jpg" alt="" width="185">
             </td>
             <td style="width: 200px;">
-                <img src="NIKE.DIOR.2.jpg" alt="" width="185">
+                <img src="./IMAGENES/NIKE.DIOR.2.jpg" alt="" width="185">
             </td>
         </tr>
     </table>
